# CS-445

./: .gitignore  ourgetoptTest.cpp
04/: Makefile  calc.l  calc.l~  calc.y  calc.y~  hw5.tar  lex.yy.c  sym.h  symlist.h  symlist.h~  y.tab.c  y.tab.h
A1/: c-.y
A2/: c-.l  c-.tar  c-.y  makefile  scanType.hpp
A3/: c-.l  c-.y  main.cpp  makefile  strutil.cpp  test.sh
A4/: c-.y  makefile
A5/: CMakeLists.txt  c-.l  c-.y  makefile  out.txt  strutil.cpp  strutil.hpp
A6/: CMakeLists.txt  c-.l  c-.y  runtest  runtest.cpp  scanType.hpp  strutil.hpp  test.sh
A6/AST/: AST.hpp  MemoryInfo.cpp  MemoryInfo.hpp  MemoryNode.cpp  MemoryNode.hpp  Node.cpp  Node.hpp  TypedNode.cpp  TypedNode.hpp  Types.cpp  Types.hpp
A6/AST/Decl/: Decl.cpp  Decl.hpp  Func.cpp  Func.hpp  Parm.cpp  Parm.hpp  Var.cpp  Var.hpp
A6/AST/Exp/: Call.cpp  Call.hpp  Const.cpp  Const.hpp  Exp.cpp  Id.cpp  Id.hpp
A6/AST/Exp/Op/: Asgn.cpp  Binary.cpp  Binary.hpp  Bool.cpp  Bool.hpp  Unary.cpp  Unary.hpp  UnaryAsgn.cpp
A6/AST/Stmt/: Compound.cpp  For.cpp  Range.cpp  Return.cpp  Return.hpp  Select.hpp  Stmt.cpp  Stmt.hpp  While.cpp
A6/Options/: Options.hpp
A6/SemanticsChecker/: AnalyzeDecls.cpp  AnalyzeExps.cpp  AnalyzeStmts.cpp  SemanticsChecker.cpp
A6/SymbolTable/: Scope.hpp  SymbolTable.cpp  SymbolTable.hpp
A6/testOutputs/: a2a.out  allbad.out  allgood.out  array.out  array2.out  arrayex.out  arrayops.out  arrays.out  arrays2.out  arrayx.out  assignBool.out  assignChar.out  assignInt.out  assignSmall.out  assignb.out  badarray.out  badcontrol.out  basicAll5.out  basicExtra.out  break.out  break2.out  break3.out  break4.out  call.out  call2.out  call3.out  call4.out  callconst.out  callerr.out  callframes.out  callglobal.out  calllocal.out  callparam.out  callstatic.out  chararray.out  compfunc.out  const.out  const2.out  constants.out  control.out  (+146 more)
A7/: CMakeLists.txt  c-.l  c-.y  c0h.tm  compare  compare.cpp  makefile  strutil.cpp  strutil.hpp  test.tm
calc/: c-.l  c-.output  c-.tab.c  c-.tab.h  c-.tar  c-.y  lex.yy.c  makefile  strutil.cpp  strutil.hpp
calcex/: calc
cpptest/: c-.tar  makefile
test/: main.cpp  tm  (+7 more)
(+283 files in other folders)
